Revert renaming of MemorySessionImpl